spec/e2e/assignment/to_this.lit
type Foo {
  Foo {
    self = "value" # error: [line 3] Syntax error at "=": Invalid assignment target.
  }
}

Foo()
